[tool.poetry]
name = "rnn_video_localization"
version = "0.1.0"
description = "Litte test with RNNs for video localization"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.0"
numpy = "^1.18"
opencv-python = "^4.2.0"
tensorflow = "^2.1.0"
tensorflow-estimator = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
